# aliyun-auto-ticket

./: .gitignore  Cargo.toml  README.md  config.example.json
.github/workflows/: release.yml
src/: client.rs  config.rs  feishu.rs  main.rs  server.rs  signer.rs  speedtest.rs  telegram.rs  templates.rs
