[package]
name = "aliyun-auto-ticket"
version = "0.1.0"
edition = "2021"
description = "自动定时向阿里云提交工单，请求解除轻量应用服务器限速"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-cron-scheduler = "0.13"
axum = "0.8"
rand = "0.8"
